fix: remove left margin on first tab causing overflow
Ultraworked with [Sisyphus](https://github.com/code-yeongyu/oh-my-openagent)

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -271,7 +271,6 @@ body {
 
 .os9-tab:first-child {
   border-radius: 6px 0 0 0;
-  margin-left: -2px;
 }
 
 .os9-tab:last-child {
